@@ -1,3 +1,7 @@
+2009-09-04  Kouichirou Eto  <2009@eto.com.nospam.com>
+
+	* lib/qwik/act-archive.rb: Use Thread.
+
 2009-09-03  Kouichirou Eto  <2009@eto.com.nospam.com>
 
 	* lib/qwik/act-metadata.rb: Cache feed file.
